// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests SegmentedControl ObjectSegments 1`] = `
<div
  data-dark={false}
>
  <div
    aria-label="test"
    aria-orientation="vertical"
    className="charcoal-segmented-control"
    id="test-id"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      aria-disabled={false}
      className="charcoal-segmented"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented__input"
        disabled={false}
        name="test-id"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option1"
      />
      <div
        className="charcoal-segmented__radio-label"
      >
        <div
          className="charcoal-segmented__radio-label__inner"
        >
          選択肢1
        </div>
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-segmented"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented__input"
        disabled={false}
        name="test-id"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option2"
      />
      <div
        className="charcoal-segmented__radio-label"
      >
        <div
          className="charcoal-segmented__radio-label__inner"
        >
          選択肢2
        </div>
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-segmented"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented__input"
        disabled={false}
        name="test-id"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option3"
      />
      <div
        className="charcoal-segmented__radio-label"
      >
        <div
          className="charcoal-segmented__radio-label__inner"
        >
          選択肢3
        </div>
      </div>
    </label>
    <label
      aria-disabled={true}
      className="charcoal-segmented"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented__input"
        disabled={true}
        name="test-id"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        type="radio"
        value="option4"
      />
      <div
        className="charcoal-segmented__radio-label"
      >
        <div
          className="charcoal-segmented__radio-label__inner"
        >
          選択肢4
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storybook Tests SegmentedControl StringSegments 1`] = `
<div
  data-dark={false}
>
  <div
    aria-label="test"
    aria-orientation="vertical"
    className="charcoal-segmented-control"
    id="test-id"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      aria-disabled={false}
      className="charcoal-segmented"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented__input"
        disabled={false}
        name="test-id"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option1"
      />
      <div
        className="charcoal-segmented__radio-label"
      >
        <div
          className="charcoal-segmented__radio-label__inner"
        >
          option1
        </div>
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-segmented"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented__input"
        disabled={false}
        name="test-id"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option2"
      />
      <div
        className="charcoal-segmented__radio-label"
      >
        <div
          className="charcoal-segmented__radio-label__inner"
        >
          option2
        </div>
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-segmented"
      data-checked={false}
    >
      <input
        checked={false}
        className="charcoal-segmented__input"
        disabled={false}
        name="test-id"
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        required={false}
        tabIndex={0}
        type="radio"
        value="option3"
      />
      <div
        className="charcoal-segmented__radio-label"
      >
        <div
          className="charcoal-segmented__radio-label__inner"
        >
          option3
        </div>
      </div>
    </label>
  </div>
</div>
`;
